[package]
name = "pong-rs"
version = "0.1.0"
authors = ["Adam <sector-f@users.noreply.github.com>"]

[dependencies]
piston = "0.27.0"
piston2d-graphics = "0.19.0"
pistoncore-glutin_window = "0.33.0"
piston2d-opengl_graphics = "0.36.0"
pistoncore-sdl2_window = "0.37.0"
piston_window = "0.59"
winit = "0.5.6"
